# Gtk4-tutorial

./: .gitignore  compile_flags.txt  flake.nix
rust/: Cargo.toml  build.rs
rust/misc/: lb3.rs  lb4_1.rs  pr3.rs
rust/src/misc/: lb1.rs  lb2.rs  lb4.rs  pr1.rs  pr2.rs  pr4.rs
rust/src/tfv/: tfv2.rs  tfv3.rs  tfv4.rs
rust/tfe/1/: main.rs
rust/tfe/2/: main.rs
rust/tfe/3/: main.rs
rust/tfe/3_r/: main.rs
rust/tfe/3_r/resources/: resources.gresource.xml  window.ui
rust/tfe/3_r/textview/: mod.rs
rust/tfe/3_temp/: main.rs
rust/tfe/3_temp/resources/: resources.gresource.xml  window.ui
rust/tfe/3_temp/textview/: imp.rs
rust/tfe/3_temp/window/: imp.rs  mod.rs
rust/tfv/: tfv1.rs  tfv3.rs  tfv4.rs
src/misc/: comp
src/tfv/: comp
