[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12"] }

[[bin]]
path = "src/misc/pr1.rs"
name = "pr1"

[[bin]]
path = "src/misc/pr2.rs"
name = "pr2"

[[bin]]
path = "src/misc/pr3.rs"
name = "pr3"

[[bin]]
path = "src/misc/pr4.rs"
name = "pr4"

[[bin]]
path = "src/misc/lb1.rs"
name = "lb1"

[[bin]]
path = "src/misc/lb2.rs"
name = "lb2"

[[bin]]
# button to destroy
path = "src/misc/lb3.rs"
name = "lb3"
