[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12"] }

[[bin]]
path = "misc/pr1.rs"
name = "pr1"

[[bin]]
path = "misc/pr2.rs"
name = "pr2"

[[bin]]
path = "misc/pr3.rs"
name = "pr3"

[[bin]]
path = "misc/pr4.rs"
name = "pr4"

[[bin]]
path = "misc/lb1.rs"
name = "lb1"

[[bin]]
path = "misc/lb2.rs"
name = "lb2"

[[bin]]
# button to destroy
path = "misc/lb3.rs"
name = "lb3"

[[bin]]
# gtkbox
path = "misc/lb4.rs"
name = "lb4"

[[bin]]
# gtkbox v2
path = "misc/lb4_1.rs"
name = "lb4_1"

# widget v2

[[bin]]
path = "tfv/tfv1.rs"
name = "tfv1"

[[bin]]
path = "tfv/tfv2.rs"
name = "tfv2"

[[bin]]
path = "tfv/tfv3.rs"
name = "tfv3"

[[bin]]
path = "tfv/tfv4.rs"
name = "tfv4"

# A very simple editor
[[bin]]
path = "tfe/1/main.rs"
name = "tfe1"
